--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pigeon: ^22.7.4
-  plugin_platform_interface: ^2.0.2
+  pigeon: 
+  plugin_platform_interface: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: 
 
 flutter:
   plugin:
